# TheAlgorithms

./: .gitignore  Bank.sol  Cargo.toml  Dog1.sol  Proxy.sol  README.md  Storage.sol
src/: main.rs
v1-hello/: Cargo.toml  README.md
v1-hello/src/: 1-struct-enum.rs  2-option-result.rs  3-loop.rs  4-stack-data.rs  5-copy.rs  6-memory.rs  7-heap.rs  8-string.rs  main.rs
v1-linked-list/: Cargo.toml
v1-linked-list/src/: 1- linked-list.rs  main.rs
v1-sorting/: Cargo.toml
v1-sorting/src/: b_rand.rs  lib.rs
