[package]
name = "solana-actions-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
