[package]
name = "v1-hello_do_not_use"
version = "0.1.0"
edition = "2021"
keywords = ["do", "not", "use"] 
description = "Do not use this crate it is for demo purpose only"
readme = "README.md"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
